// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: application 1`] = `
<Fragment>
  <div
    className="display-flex-row display-inline-flex-baseline"
  >
    <h3>
      metric.ncloc.name
    </h3>
    <span
      className="spacer-left small"
    >
      (
      project.info.main_branch
      )
    </span>
  </div>
  <div
    className="display-flex-center"
  >
    <DrilldownLink
      className="huge"
      component="my-project"
      metric="ncloc"
    >
      <span
        aria-label="project.info.see_more_info_on_x_locs.1.0"
      >
        1
      </span>
    </DrilldownLink>
    <span
      className="spacer-left"
    >
      <SizeRating
        value={1}
      />
    </span>
    <span
      className="huge-spacer-left display-inline-flex-center"
    >
      <DrilldownLink
        component="my-project"
        metric="projects"
      >
        <span
          className="big"
        >
          1
        </span>
      </DrilldownLink>
      <span
        className="little-spacer-left text-muted"
      >
        metric.projects.name
      </span>
    </span>
  </div>
</Fragment>
`;

exports[`should render correctly: project 1`] = `
<Fragment>
  <div
    className="display-flex-row display-inline-flex-baseline"
  >
    <h3>
      metric.ncloc.name
    </h3>
    <span
      className="spacer-left small"
    >
      (
      project.info.main_branch
      )
    </span>
  </div>
  <div
    className="display-flex-center"
  >
    <DrilldownLink
      className="huge"
      component="my-project"
      metric="ncloc"
    >
      <span
        aria-label="project.info.see_more_info_on_x_locs.1.0"
      >
        1
      </span>
    </DrilldownLink>
    <span
      className="spacer-left"
    >
      <SizeRating
        value={1}
      />
    </span>
  </div>
</Fragment>
`;
